# rdmlibpy

./: .gitignore  .pre-commit-config.yaml  .testmondata  changelog.md  pyproject.toml
src/rdmlibpy/: __init__.py  base.py  common.py  process.py  test_common.py  workflow.py
src/rdmlibpy/dataframes/: __init__.py  dataframe_transforms.py  io.py  transforms.py
src/rdmlibpy/loaders/: __init__.py  bruker_opus.py  davis.py  hiden_rga.py  mks_ftir.py
src/rdmlibpy/loaders/channel/: eurotherm.py  tclogger.py
src/rdmlibpy/metadata/: __init__.py  flattery.py  metadata.py  queries.py  resolvers.py
src/rdmlibpy/xarrays/: __init__.py  io.py  selection.py  transforms.py  xarray_io.py  xarray_selection.py  xarray_transforms.py  xarray_utils.py
tests/: test_base.py  test_process.py  test_workflow.py
tests/data/bruker/: LC003.3448  LC003.3449  LC003.3450
tests/data/dataframe/: test_data_thousands.csv  test_data_utf16.csv
tests/data/davis/: SimpleImageSet.set
tests/data/davis/SimpleImageSet/: B00001.im7  B00002.im7  B00003.im7  B00004.im7  B00005.im7  B00006.im7  B00007.im7  B00008.im7  B00009.im7  B00010.im7  JobHistory.xml
tests/data/hsense/: HSense250210_140411.msdat_mean
tests/dataframes/: test_dataframe_transforms.py  test_dataframes_io.py  test_io.py  test_transforms.py
tests/loaders/: test_bruker_opus.py  test_davis.py
tests/metadata/: test_flattery.py  test_metdata_access.py  test_resolvers.py
tests/xarrays/: test_xarray_io.py  test_xarray_selection.py  test_xarray_transforms.py
