[tool.poetry]
name = "rdmlibpy"
version = "0.2.23"
description = ""
authors = ["thaeber <thomas.haeber@kit.edu>"]
readme = "README.md"
packages = [
    { include = "rdmlibpy", from = "src" },
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
brukeropus = ">=1.1"
dask = ">=2025.2"
davislib = {git = "https://github.com/thaeber/davislib.git"}
h5netcdf = ">=1.4"
netcdf4 = ">=1.7"
numpy = ">=1.26"
omegaconf = ">=2.3"
pandas = ">=2.2"
pint-pandas = ">=0.7"
pint-xarray = ">=0.4"
pydantic = ">=2.5"
python-dateutil = ">=2.8"
scikit-image = ">=0.25"
tables = ">=3.9"
xarray = ">=2024.10.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
bump-my-version = ">=0.20"
pandas-stubs = ">=2.2"
pytest-watcher = ">=0.4"
git-changelog = ">=2.5"
pre-commit = ">=3.7"
matplotlib = ">=3.9"
pytest-testmon = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpversion]
current_version = "0.2.23"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = '''^version\s*=\s*([\'\"\`])({current_version})\1'''
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/rdmlibpy/__init__.py"

[tool.git-changelog]
convention = "angular"
in-place = false
output = "changelog.md"
provider = "github"
sections = "fix,feat,refactor,chore,style,build"
template = "angular"

[tool.black]
skip-string-normalization=true
